# ESP32-Balise-Sender

./: .gitignore  Makefile  jtag_flash_app.sh  jtag_flash_bootloader.sh  openocd.cfg  platformio.ini  sdkconfig  sdkconfig.defaults.esp32  sdkconfig.defaults.esp32s2  sdkconfig.defaults.esp32s2.tinyusb  sdkconfig.defaults.esp32s3  sdkconfig.esp32s2  start_gdb.sh  start_openocd.sh
.github/workflows/: github-actions.yml
ESP32-Balise-Sender/: .gitignore  CMakeLists.txt  Makefile  sdkconfig  sdkconfig.defaults
ESP32-Balise-Sender/configs/: sdkconfig-BN-220  sdkconfig-L80-R  sdkconfig-L96-I2C  sdkconfig-L96-UART  sdkconfig-mock-led2
ESP32-Balise-Sender/main/: BLEConfig.cpp  Beacon.cpp  Beacon.h  CMakeLists.txt  Config.cpp  Config.h  GPSCnx.cpp  GPSCnx.h  Kconfig.projbuild  LED.cpp  LED.h  SPort.cpp  SPort.h  Switches.cpp  Switches.h  component.mk  droneID_FR.h  main.cpp  mock.h
ESP32-Balise-Sender/main/ulp/: led.S
ESP32-Balise-Sender/nvs_configs/: template.csv
ESP32-Balise-Sender/utils/: LaBalise.lua  plop.py
ESP32-Balise-Sender/utils/OpenTX/SCRIPTS/TELEMETRY/: LaBali.lua
docs/jeti/: Readme.md  jeti.md
ledc/template-app/main/: CMakeLists.txt  main.c
main/: BLEConfig.cpp  Beacon.cpp  Beacon.h  CMakeLists.txt  Config.cpp  Config.h  GPSCnx.cpp  GPSCnx.h  Jeti.cpp  Jeti.h  JetiScreen.cpp  JetiScreen.h  LED.cpp  LED.h  SPort.cpp  SPort.h  SPortULP.cpp  SPortULP.h  Switches.cpp  Switches.h  Telemetry.h  TinyGPS++.h  ULP.cpp  ULP.h  commons.h  droneID_FR.h  main.cpp  msc_disk.cpp
nvs_configs/: template.csv
ulp/: ulp.S
ulp/template-app/main/: CMakeLists.txt  component.mk  main.c
ulp/template-app/main/ulp/: plop.S
ulp_riscv/: dbg.c  dbg.h  led.c  led.h  main.c  sport.c  sport.h  uart.c  uart.h  ulp_gpio.h  ulp_shared_types.h
utils/: compute-NMEA-cksum.py
utils/AppInventor/: ProgLaBalise.aia
utils/OpenTX/SCRIPTS/TELEMETRY/: LaBali.lua
utils/OpenTX/SCRIPTS/TOOLS/: LaBalise.lua
utils/TTGO-T-Display/: Button2.h  ESP32-Balise-Receiver-TTGO-T-Display.ino
